lab1_backup/Code_0324/Code/syntax.output
State 29 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier error
    6       | Specifier ExtDecList error
    7       | Specifier SEMI
    8       | error SEMI
    9       | Specifier FunDec CompSt

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error LP RP
   25       | ID LP error
   26       | error RP

   27 VarList: ParamDec COMMA VarList
   28        | ParamDec

   29 ParamDec: Specifier VarDec

   30 CompSt: LC DefList StmtList RC
   31       | error DefList StmtList RC
   32       | LC DefList StmtList error

   33 StmtList: Stmt StmtList
   34         | %empty

   35 Stmt: Exp SEMI
   36     | Exp error SEMI
   37     | CompSt
   38     | RETURN Exp SEMI
   39     | RETURN Exp error SEMI
   40     | IF LP Exp RP Stmt
   41     | IF LP Exp RP Stmt ELSE Stmt
   42     | WHILE LP Exp RP Stmt

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp
   51    | VarDec ASSIGNOP error

   52 Exp: Exp ASSIGNOP Exp
   53    | Exp ASSIGNOP error
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP error RP
   66    | ID LP RP
   67    | Exp LB Exp RB
   68    | Exp LB error RB
   69    | Exp DOT ID
   70    | ID
   71    | INT
   72    | FLOAT

   73 Args: Exp COMMA Args
   74     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 5 6 8 21 24 25 26 31 32 36 39 46 51 53 65 68
INT (258) 20 71
FLOAT (259) 72
ID (260) 16 18 19 22 23 25 64 65 66 69 70
COMMA (261) 11 27 48 73
TYPE (262) 12
LC (263) 14 30 32
RC (264) 14 30 31
HIGHER_THAN_RC (265)
STRUCT (266) 14 15
RETURN (267) 38 39
IF (268) 40 41
WHILE (269) 42
LOWER_THAN_ELSE (270)
ELSE (271) 41
ASSIGNOP (272) 50 51 52 53
OR (273) 55
AND (274) 54
RELOP (275) 56
PLUS (276) 57
MINUS (277) 58 62
STAR (278) 59
DIV (279) 60
NOT (280) 63
LP (281) 22 23 24 25 40 41 42 61 64 65 66
RP (282) 22 23 24 26 40 41 42 61 64 65 66
LB (283) 20 21 67 68
RB (284) 20 21 67 68
DOT (285) 69
SEMI (286) 4 7 8 35 36 38 39 45 46


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (36)
    on left: 10 11, on right: 4 6 11
Specifier (37)
    on left: 12 13, on right: 4 5 6 7 9 29 45
StructSpecifier (38)
    on left: 14 15, on right: 13
OptTag (39)
    on left: 16 17, on right: 14
Tag (40)
    on left: 18, on right: 15
VarDec (41)
    on left: 19 20 21, on right: 10 11 20 21 29 49 50 51
FunDec (42)
    on left: 22 23 24 25 26, on right: 9
VarList (43)
    on left: 27 28, on right: 22 27
ParamDec (44)
    on left: 29, on right: 27 28
CompSt (45)
    on left: 30 31 32, on right: 9 37
StmtList (46)
    on left: 33 34, on right: 30 31 32 33
Stmt (47)
    on left: 35 36 37 38 39 40 41 42, on right: 33 40 41 42
DefList (48)
    on left: 43 44, on right: 14 30 31 32 43
Def (49)
    on left: 45 46, on right: 43
DecList (50)
    on left: 47 48, on right: 45 48
Dec (51)
    on left: 49 50 51, on right: 47 48
Exp (52)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72, on right: 35 36 38 39 40 41 42 50 52 53 54 55 56 57 58
    59 60 61 62 63 67 68 69 73 74
Args (53)
    on left: 73 74, on right: 64 73


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . error
    6       | Specifier . ExtDecList error
    7       | Specifier . SEMI
    9       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    5 ExtDef: Specifier error .
   24 FunDec: error . LP RP
   26       | error . RP

    LP  shift, and go to state 22
    RP  shift, and go to state 23

    $default  reduce using rule 5 (ExtDef)


State 16

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   25       | ID . LP error

    LP  shift, and go to state 24

    $default  reduce using rule 19 (VarDec)


State 17

    7 ExtDef: Specifier SEMI .

    $default  reduce using rule 7 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI
    6       | Specifier ExtDecList . error

    error  shift, and go to state 25
    SEMI   shift, and go to state 26


State 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    $default  reduce using rule 10 (ExtDecList)


State 20

    9 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


State 21

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 44 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 22

   24 FunDec: error LP . RP

    RP  shift, and go to state 36


State 23

   26 FunDec: error RP .

    $default  reduce using rule 26 (FunDec)


State 24

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   25       | ID LP . error

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 38

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 41


State 25

    6 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 6 (ExtDef)


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 19


State 28

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 44
    INT    shift, and go to state 45


State 29

   31 CompSt: error . DefList StmtList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 44 (DefList)]
    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 35


State 30

   30 CompSt: LC . DefList StmtList RC
   32       | LC . DefList StmtList error

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 44 (DefList)]
    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 35


State 31

    9 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 9 (ExtDef)


State 32

   46 Def: error . SEMI

    SEMI  shift, and go to state 48


State 33

   45 Def: Specifier . DecList SEMI

    ID  shift, and go to state 42

    VarDec   go to state 49
    DecList  go to state 50
    Dec      go to state 51


State 34

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 52


State 35

   43 DefList: Def . DefList

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 44 (DefList)]
    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 35


State 36

   24 FunDec: error LP RP .

    $default  reduce using rule 24 (FunDec)


State 37

   25 FunDec: ID LP error .

    $default  reduce using rule 25 (FunDec)


State 38

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 39

   29 ParamDec: Specifier . VarDec

    ID  shift, and go to state 42

    VarDec  go to state 54


State 40

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 55


State 41

   27 VarList: ParamDec . COMMA VarList
   28        | ParamDec .

    COMMA  shift, and go to state 56

    $default  reduce using rule 28 (VarList)


State 42

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 43

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 44

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 57


State 45

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 58


State 46

   31 CompSt: error DefList . StmtList RC

    error   shift, and go to state 29
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    LC      shift, and go to state 30
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66
    LP      shift, and go to state 67

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 69
    Stmt      go to state 70
    Exp       go to state 71


State 47

   30 CompSt: LC DefList . StmtList RC
   32       | LC DefList . StmtList error

    error   shift, and go to state 29
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    LC      shift, and go to state 30
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66
    LP      shift, and go to state 67

    error  [reduce using rule 34 (StmtList)]
    RC     reduce using rule 34 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 72
    Stmt      go to state 70
    Exp       go to state 71


State 48

   46 Def: error SEMI .

    $default  reduce using rule 46 (Def)


State 49

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp
   51    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 73
    LB        shift, and go to state 28

    $default  reduce using rule 49 (Dec)


State 50

   45 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 74


State 51

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 75

    $default  reduce using rule 47 (DecList)


State 52

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 53

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 54

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 28

    $default  reduce using rule 29 (ParamDec)


State 55

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 56

   27 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 76
    ParamDec         go to state 41


State 57

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 58

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 59

   71 Exp: INT .

    $default  reduce using rule 71 (Exp)


State 60

   72 Exp: FLOAT .

    $default  reduce using rule 72 (Exp)


State 61

   64 Exp: ID . LP Args RP
   65    | ID . LP error RP
   66    | ID . LP RP
   70    | ID .

    LP  shift, and go to state 77

    $default  reduce using rule 70 (Exp)


State 62

   38 Stmt: RETURN . Exp SEMI
   39     | RETURN . Exp error SEMI

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 78


State 63

   40 Stmt: IF . LP Exp RP Stmt
   41     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 64

   42 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


State 65

   62 Exp: MINUS . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 81


State 66

   63 Exp: NOT . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 82


State 67

   61 Exp: LP . Exp RP

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 83


State 68

   37 Stmt: CompSt .

    $default  reduce using rule 37 (Stmt)


State 69

   31 CompSt: error DefList StmtList . RC

    RC  shift, and go to state 84


State 70

   33 StmtList: Stmt . StmtList

    error   shift, and go to state 29
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    LC      shift, and go to state 30
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66
    LP      shift, and go to state 67

    error  [reduce using rule 34 (StmtList)]
    RC     reduce using rule 34 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 85
    Stmt      go to state 70
    Exp       go to state 71


State 71

   35 Stmt: Exp . SEMI
   36     | Exp . error SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . LB error RB
   69    | Exp . DOT ID

    error     shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    LB        shift, and go to state 95
    DOT       shift, and go to state 96
    SEMI      shift, and go to state 97


State 72

   30 CompSt: LC DefList StmtList . RC
   32       | LC DefList StmtList . error

    error  shift, and go to state 98
    RC     shift, and go to state 99


State 73

   50 Dec: VarDec ASSIGNOP . Exp
   51    | VarDec ASSIGNOP . error

    error  shift, and go to state 100
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 101


State 74

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 75

   48 DecList: Dec COMMA . DecList

    ID  shift, and go to state 42

    VarDec   go to state 49
    DecList  go to state 102
    Dec      go to state 51


State 76

   27 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 27 (VarList)


State 77

   64 Exp: ID LP . Args RP
   65    | ID LP . error RP
   66    | ID LP . RP

    error  shift, and go to state 103
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67
    RP     shift, and go to state 104

    Exp   go to state 105
    Args  go to state 106


State 78

   38 Stmt: RETURN Exp . SEMI
   39     | RETURN Exp . error SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . LB error RB
   69    | Exp . DOT ID

    error     shift, and go to state 107
    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    LB        shift, and go to state 95
    DOT       shift, and go to state 96
    SEMI      shift, and go to state 108


State 79

   40 Stmt: IF LP . Exp RP Stmt
   41     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 109


State 80

   42 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 110


State 81

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   62    | MINUS Exp .
   67    | Exp . LB Exp RB
   68    | Exp . LB error RB
   69    | Exp . DOT ID

    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    LB    shift, and go to state 95
    DOT   shift, and go to state 96

    $default  reduce using rule 62 (Exp)


State 82

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   63    | NOT Exp .
   67    | Exp . LB Exp RB
   68    | Exp . LB error RB
   69    | Exp . DOT ID

    LB   shift, and go to state 95
    DOT  shift, and go to state 96

    $default  reduce using rule 63 (Exp)


State 83

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   61    | LP Exp . RP
   67    | Exp . LB Exp RB
   68    | Exp . LB error RB
   69    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    RP        shift, and go to state 111
    LB        shift, and go to state 95
    DOT       shift, and go to state 96


State 84

   31 CompSt: error DefList StmtList RC .

    $default  reduce using rule 31 (CompSt)


State 85

   33 StmtList: Stmt StmtList .

    $default  reduce using rule 33 (StmtList)


State 86

   36 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 112


State 87

   52 Exp: Exp ASSIGNOP . Exp
   53    | Exp ASSIGNOP . error

    error  shift, and go to state 113
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 114


State 88

   55 Exp: Exp OR . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 115


State 89

   54 Exp: Exp AND . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 116


State 90

   56 Exp: Exp RELOP . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 117


State 91

   57 Exp: Exp PLUS . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 118


State 92

   58 Exp: Exp MINUS . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 119


State 93

   59 Exp: Exp STAR . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 120


State 94

   60 Exp: Exp DIV . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 121


State 95

   67 Exp: Exp LB . Exp RB
   68    | Exp LB . error RB

    error  shift, and go to state 122
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 123


State 96

   69 Exp: Exp DOT . ID

    ID  shift, and go to state 124


State 97

   35 Stmt: Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 98

   32 CompSt: LC DefList StmtList error .

    $default  reduce using rule 32 (CompSt)


State 99

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


State 100

   51 Dec: VarDec ASSIGNOP error .

    $default  reduce using rule 51 (Dec)


State 101

   50 Dec: VarDec ASSIGNOP Exp .
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . LB error RB
   69    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    LB        shift, and go to state 95
    DOT       shift, and go to state 96

    $default  reduce using rule 50 (Dec)


State 102

   48 DecList: Dec COMMA DecList .

    $default  reduce using rule 48 (DecList)


State 103

   65 Exp: ID LP error . RP

    RP  shift, and go to state 125


State 104

   66 Exp: ID LP RP .

    $default  reduce using rule 66 (Exp)


State 105

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . LB error RB
   69    | Exp . DOT ID
   73 Args: Exp . COMMA Args
   74     | Exp .

    COMMA     shift, and go to state 126
    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    LB        shift, and go to state 95
    DOT       shift, and go to state 96

    $default  reduce using rule 74 (Args)


State 106

   64 Exp: ID LP Args . RP

    RP  shift, and go to state 127


State 107

   39 Stmt: RETURN Exp error . SEMI

    SEMI  shift, and go to state 128


State 108

   38 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 38 (Stmt)


State 109

   40 Stmt: IF LP Exp . RP Stmt
   41     | IF LP Exp . RP Stmt ELSE Stmt
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . LB error RB
   69    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    RP        shift, and go to state 129
    LB        shift, and go to state 95
    DOT       shift, and go to state 96


State 110

   42 Stmt: WHILE LP Exp . RP Stmt
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . LB error RB
   69    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    RP        shift, and go to state 130
    LB        shift, and go to state 95
    DOT       shift, and go to state 96


State 111

   61 Exp: LP Exp RP .
